2006-10-16  Brian Cameron  <brian.cameron@sun.com>

        * NEWS, daemon/auth.c, daemon/gdm.c, daemon/slave.c: Clean up
          comments.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

        * gui/Makefile.am: Add -lX11 to link statements so that the new code
          from Ariel that uses X atoms will build on Solaris.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c: Fix comment.

2006-10-08  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmcommon.c: Add missing break statement to case 't' in the
          function gdm_common_expand_text.

2006-10-05  Brian Cameron  <brian.cameron@sun.com>

        * daemon/auth.c: Set authdir to NULL after freeing to avoid accessing
          an invalid pointer.  Fixes bug #359831.  Patch provided by
          Amnon Aaronsohn <bla@cs.huji.ac.il>.

2006-10-02  Brian Cameron  <brian.cameron@sun.com>

        * daemon/slave.c, daemon/verify-crypt.c, daemon/verify-pam.c,
          daemon/verify-shadow.c, gui/greeter/greeter_item.c: Fix so that
	  if timed login script returns an invalid user, timed login is
          not turned on.  Fixes bug #340148.  Patch by Andrew
          (andrewz@springsrescuemission.org).

2006-10-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c, gui/gdmsession.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_parser.c: Fix leaks.  Fixes bug 
	  #357879.  Patch proviced by Kjartan Maraas.
	  <kmaraas@gnome.org>.

2006-10-02  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.1:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-09-27  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsetup.c:  Fix so the wm close works as the Close button
          in the dialog.  Fixes bug #358002.  Patch by Matthias Clasen
          <mclasen@redhat.com>.

2006-09-27  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsetup.c: Use g_markup_printf_escaped so gdmsetup better