@@ -1,3 +1,8 @@
+2006-10-17  Brian Cameron  <brian.cameron@sun.com>
+
+        * gui/gdmphotosetup.c: Enable help button.  Fixes bug #362853.
+          Patch by Matthias Clasen <mclasen@redhat.com>.
+
 2006-10-16  Brian Cameron  <brian.cameron@sun.com>
 
         * NEWS, daemon/auth.c, daemon/gdm.c, daemon/slave.c: Clean up
